_sass/_base.scss
/*******************************************************************************
 * Styles for the base elements of the theme.
 ******************************************************************************/

 p.first::first-letter {
  text-transform: uppercase;
  font-size: 3em;
  letter-spacing: 3px;
}

// Spacing
.spacing {
  margin-bottom: 0.3em;
}

// Disclaimer

.admonition, div.admonition {
    margin: 1.5625em auto;
    padding: 0 0.6rem 0.8rem;
    overflow: hidden;
    page-break-inside: avoid;
    //border-left: 0.2rem solid;
    //border-left-color: #{$custom-color};    
    border-radius: 0.2rem;   
    box-shadow: 0 0.2rem 0.5rem rgba(0, 0, 0 , 0.15), 0 0 0.0625rem rgba(0, 0, 0 , 0.10); 
    transition: color .25s,background-color .25s,border-color .25s;
}

div.admonition {
    margin-top: 30px;
    margin-bottom: 10px;
    padding: 7px;    
}

.admonition.warning>.admonition-title, div.admonition.warning>.admonition-title {
    margin-top: -1em;
    //background-color: #{$code-bg-color-light};
}

.admonition>.admonition-title, div.admonition>.admonition-title {
    position: relative;
    margin: 0 -0.6rem;
    padding: 0.8em 0.6rem 0.4rem 2rem;
    font-weight: normal;
    //font-weight: 700;
    background-color: #{$code-bg-color-light};
}

p.admonition-title {
    color: #{$custom-color};   
}

.admonition p.admonition-title~*, div.admonition p.admonition-title~* {
    margin-left: 1.8rem;
    margin-right: 1.8rem;    
    margin-top: 1.2rem;    
}

.admonition-icon {
    margin-top: -0.2em;
    margin-left: -1.2em;
    margin-right: 0.1em;
}

// Typography

//@import url('https://fonts.googleapis.com/css?family=Noto+Serif&display=swap');

@font-face {
    font-family: 'Noto Serif';
    src: url("../fonts/NotoSerif-Regular.ttf") format("truetype");
    font-weight: normal;
    font-style: normal;
    font-display: swap;
}

@font-face {
    font-family: 'Noto Serif';
    src: url("../fonts/NotoSerif-Bold.ttf") format("truetype");
    font-weight: bold;
    font-style: normal;
    font-display: swap;
}

@font-face {
    font-family: 'Noto Serif';
    src: url("../fonts/NotoSerif-Italic.ttf") format("truetype");
    font-weight: normal;
    font-style: italic;
    font-display: swap;
}

@font-face {
    font-family: 'Noto Serif';
    src: url("../fonts/NotoSerif-BoldItalic.ttf") format("truetype");
    font-weight: bold;
    font-style: italic;
    font-display: swap;
}

html {
  font-size: 18px;
}

body {
  font-family: 'Noto Serif', Georgia, 'Times New Roman', serif;
  font-size: 1rem;
  line-height: 1.5;
}

p, h1, h2, h3, h4, h5, h6, em, div, span, strong {
  color: var(--global-text-color);
  font-family: 'Noto Serif', Georgia, 'Times New Roman', serif;
}

p {
  line-height: 1.5;
  margin-bottom: 1.2rem;
}

h1 {
  font-size: 2.2rem;
  line-height: 1.5;
  margin-bottom: 0.8rem;
}

h2 {
  font-size: 1.75rem;
  line-height: 1.5;
  margin-bottom: 0.7rem;
}

h3 {
  font-size: 1.4rem;
  line-height: 1.5;
  margin-bottom: 0.6rem;
}

h4 {
  font-size: 1.15rem;
  line-height: 1.5;
}

h5 {
  font-size: 1rem;
  line-height: 1.5;
}

h6 {
  font-size: 0.9rem;
  line-height: 1.5;
}

li {
  line-height: 1.5;
}

strong {
  font-weight: bold;
  font-style: normal;
}

.center {
  display: block;
  margin-left: auto;
  margin-right: auto;
}

.img-post {
  margin-bottom: 1em;
}

a, table.table a {
  color: var(--global-theme-color);
  &:hover {
    color: var(--global-theme-color);
    text-decoration: underline;
  }
  &:hover:after :not(.nav-item.dropdown) {
    width: 100%;
  }
}

blockquote {
  background: var(--global-bg-color);
  border-left: 2px solid var(--global-theme-color);
  margin: 1.5em 10px;
  padding: 0.5em 10px;
  font-size: 1.2rem;
}

// Math

.equation {
  margin-bottom: 1rem;
  text-align: center;
}

// Caption

.caption {
  font-size: 0.875rem;
  margin-top: 0.75rem;
  margin-bottom: 1.5rem;
  text-align: center;
}

// Citation
.citation, .citation-number {
  color: var(--global-theme-color);
}

// Profile

.profile {
  margin-left: 1rem;
  width: 100%;

  .address {
    margin-bottom: 5px;
    margin-top: 5px;
    font-family: monospace;
    p {
      display: inline-block;
      margin: 0;
    }
  }
}

@media (min-width: 576px) {
  .profile {
    width: 30%;
    .address {
      p { display: block; }
    }
  }
}

.post-description {
  margin-bottom: 2rem;
  font-size: 0.875rem;
  a {
    color: inherit;
    &:hover {
      color: var(--global-theme-color);
      text-decoration: none;
    }
  }
}


// Navbar customization

.navbar {
  box-shadow: none;
  border-bottom: 1px solid $grey-color-light;
  background-color: var(--global-bg-color);
  opacity: 0.95;
}
.navbar .dropdown-menu {
  background-color: var(--global-bg-color);
  a:not(.active) {
    color: var(--global-text-color);
  }
  a:hover {
    color: var(--global-hover-color);
  }
}
.dropdown-item {
  color: var(--global-text-color);
    &:hover {
      color: var(--global-hover-color);
      background-color: var(--global-bg-color);
    }
}
.navbar.navbar-light {
  a {
    &:hover {
      text-decoration: none;
    }
  }
  .navbar-brand {
    color: var(--global-text-color);
  }
  .navbar-nav .nav-item .nav-link {
    color: var(--global-text-color);
    &:hover {
      color: var(--global-hover-color);
    }
  }
  .navbar-nav .nav-item.active>.nav-link {
      background-color: inherit;
      font-weight: bolder;
      color: var(--global-theme-color);
      &:hover {
        color: var(--global-hover-color);
      }
  }
  .navbar-brand.social {
    padding-bottom: 0;
    padding-top: 0;
    font-size: 1.7rem;
    a {
      i::before {
        color: var(--global-text-color);
        -webkit-transition: all 0.2s ease-in-out;
      }
      &:hover {
        i::before {
          color: var(--global-theme-color);
        }
      }
    }
  }
}
/* ... */

